force-app/main/default/objects/custom_create74__c/custom_create74__c.object-meta.xml
<CustomObject>
    <label>Custom created object74</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects74</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>