force-app/main/default/objects/custom_create74__c/fields/custom_create_74field559__c.field-meta.xml
<CustomField>
    <fullName>custom_create_74field559__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 74field559</label>
    <type>Checkbox</type>
</CustomField>